# data-profiler-pipeline

./: .gitignore  README.md  profile_data.py  pyproject.toml  requirements.txt
